--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,13 @@
         "kreait/laravel-firebase": "5.9",
         "laravel/breeze": "^2.1",
         "laravel/framework": "^11.9",
+        "laravel/reverb": "^1.4",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^3.1",
         "niklasravnsborg/laravel-pdf": "^4.1",
         "nwidart/laravel-modules": "^11.0",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^6.9",
         "stevebauman/location": "^7.3",
         "stichoza/google-translate-php": "^5.1"
